--- a/masks.html
+++ b/masks.html
@@ -55,7 +55,7 @@
 							<div class="row">
 								<div class="col-6 col-12-mobilep">
 									<label for="name">Your Name</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
+									<input class="text" type="text" name="name" id="name" value="" placeholder="Jonathan Doe" />
 								</div>
 								<div class="col-6 col-12-mobilep">
 									<label for="name">Endorsers Name</label>
