--- a/money.html
+++ b/money.html
@@ -59,7 +59,10 @@
 											<a href="https://www.redcross.org/donate/donation.html/"><input type="button" value="Send" />
 											</a>
 										</li>
-										<li><input type="reset" value="Reset" class="alt" /></li>
+										<li>
+											<a href="https://docs.google.com/forms/d/e/1FAIpQLScNU3syhASFvCggOcXLinhrjJFOuB-NLSMggCV2bTaymwtPtQ/viewform"><input type="button" value="Please fill out this survey">
+
+										></li>
 									</ul>
 								</div>
 							</div>
