--- a/money.html
+++ b/money.html
@@ -60,7 +60,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="https://docs.google.com/forms/d/e/1FAIpQLScNU3syhASFvCggOcXLinhrjJFOuB-NLSMggCV2bTaymwtPtQ/viewform"><input type="button" value="Please fill out this survey">
+											<a href="https://docs.google.com/forms/d/e/1FAIpQLScNU3syhASFvCggOcXLinhrjJFOuB-NLSMggCV2bTaymwtPtQ/viewform"><input type="button" value="Please fill out this survey!">
 
 										></li>
 									</ul>
