--- a/pushups.html
+++ b/pushups.html
@@ -42,9 +42,12 @@
 							<h3>The Pledge</h3>
 						</header>
 						<p>
-							Show this to your endorser and have them sign it:
+							Show this to your endorser and if you want, print it out:
 						</p>
-						<blockquote>"Hey (mom/dad/guardian), I’m thinking about joining the Mask On, Danger Gone cause this quarantine. This will allow me to stay fit and support those who are less fortunate than us. To incentivize me and help the cause, would you pledge me 5 dollars for every 20 push ups I do? All the proceeds would be donated to Mask On, Danger Gone, to help people who aren't as fortunate as us during this time of great need.”</blockquote>
+						<blockquote>"I’m thinking about joining the Mask On, Danger Gone cause this quarantine. This will allow me to stay fit and support those who are less fortunate than us. To incentivize me and help the cause, I will do pushups, and you will pledge me money for every __ amount of exersises I do? All the proceeds would be donated to the American Red Cross Foundation, to help people who aren't as fortunate as us during this time of great need.”</blockquote>
+						<p>
+							No. of pushups completed: ____ Money per pushup completed: ____ Money Raised: ___
+						</p>
 						
 					</section>
 					<section>
