--- a/pushups.html
+++ b/pushups.html
@@ -46,45 +46,9 @@
 						</p>
 						<blockquote>"I’m thinking about joining the Mask On, Danger Gone cause this quarantine. This will allow me to stay fit and support those who are less fortunate than us. To incentivize me and help the cause, I will do pushups, and you will pledge me money for every __ amount of exersises I do? All the proceeds would be donated to the American Red Cross Foundation, to help people who aren't as fortunate as us during this time of great need.”</blockquote>
 						<p>
-							No. of pushups completed: ____ Money per pushup completed: ____ Money Raised: ___
+							No. of pushups completed: ______ Money per pushup completed: ______ Money Raised: ______
 						</p>
-						
-					</section>
-					<section>
-						<header>
-							<h3>Pledge Form</h3>
-						</header>
-						<form method="post" action="#">
-							<div class="row">
-								<div class="col-6 col-12-mobilep">
-									<label for="name">Your Name</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
-								</div>
-								<div class="col-6 col-12-mobilep">
-									<label for="name">Endorsers Name</label>
-									<input class="text" type="text" name="email" id="email" value="" placeholder="John Doe" />
-								</div>
-								<div class="col-6 col-12-mobilep">
-									<label for="name">Amount of pushups completed:</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="50" />
-								</div>
-								<div class="col-6 col-12-mobilep">
-									<label for="subject">My endorser pledges me this much money:</label>
-									<input class="email" type="text" name="subject" id="subject" value="" placeholder="$10" />
-								</div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li>
-											<a href="thankyou.html"><input type="button" value="Send" />
-											</a>
-										</li>
-										<li><input type="reset" value="Reset" class="alt" /></li>
-									</ul>
-								</div>x
-							</div>
-						</form>
-					</section>
-					<section>	
+							
 				</div></div>
 			<div id="footer1">
 				<div class="container medium">
