--- a/masks.html
+++ b/masks.html
@@ -44,8 +44,15 @@
 						<p>
 							Show this to your endorser and have them sign it:
 						</p>
-						<blockquote>"Hey (mom/dad/guardian), I’m thinking about joining the Mask On, Danger Gone to help flatten the curve. I will be more responsible by properly wearing protective masks when stepping out. To incentivize me and help the cause, would you pledge me 1 dollar for every time I go outside/hang out with friends while always wearing my mask? All the proceeds would be donated to Mask On, Danger Gone, who are raising money to help the Red Cross Foundation's COVID-19 relief movement.”</blockquote>
+						<blockquote>"I’m thinking about joining the Mask On, Danger Gone to help flatten the curve. I will be more responsible by properly wearing protective masks when stepping out. To incentivize me and help the cause, would you pledge me 1 dollar for every time I go outside/hang out with friends while always wearing my mask? All the proceeds would be donated to the American Red Cross Foundation, who are raising money to help the COVID-19 relief movement.”</blockquote>
 						
+					
+					</section>
+
+					<section>
+						<p>
+							No. of times a masked outings: _____ Money per masked outing: _____ Money Raised: _____
+						</p>
 					</section>
 					<section>
 						<header>
@@ -55,7 +62,7 @@
 							<div class="row">
 								<div class="col-6 col-12-mobilep">
 									<label for="name">Your Name</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="Jonathan Doe" />
+									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
 								</div>
 								<div class="col-6 col-12-mobilep">
 									<label for="name">Endorsers Name</label>
