--- a/masks.html
+++ b/masks.html
@@ -53,6 +53,12 @@
 						<p>
 							No. of times a masked outings: _____ Money per masked outing: _____ Money Raised: _____
 						</p>
+						<div class="col-12">
+									<ul class="actions special">
+										<li>
+											<a href="https://www.maskondangergone.github.io/money.html"><input type="button" value="Check out How to Donate" />
+											</a>
+										</li>
 					</section>
 			<div id="footer2">
 				<div class="container medium">
