--- a/masks.html
+++ b/masks.html
@@ -44,12 +44,52 @@
 						<p>
 							Show this to your endorser and have them sign it:
 						</p>
-						<blockquote>"I’m thinking about joining the Mask On, Danger Gone to help flatten the curve. I will be more responsible by properly wearing protective masks when stepping out. To incentivize me and help the cause, would you pledge me 1 dollar for every time I go outside/hang out with friends while always wearing my mask? All the proceeds would be donated to the American Red Cross Foundation.”</blockquote>
+						<blockquote>"I’m thinking about joining the Mask On, Danger Gone to help flatten the curve. I will be more responsible by properly wearing protective masks when stepping out. To incentivize me and help the cause, would you pledge me 1 dollar for every time I go outside/hang out with friends while always wearing my mask? All the proceeds would be donated to the American Red Cross Foundation, who are raising money to help the COVID-19 relief movement.”</blockquote>
+						
+					
+					</section>
 
+					<section>
 						<p>
-							No. of times a masked outings: _____ Money per masked outing: _____ Money Raised: _____
+							No. of times a masked outings: _____ Money per
 						</p>
 					</section>
+					<section>
+						<header>
+							<h3>Pledge Form</h3>
+						</header>
+						<form method="post" action="#">
+							<div class="row">
+								<div class="col-6 col-12-mobilep">
+									<label for="name">Your Name</label>
+									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
+								</div>
+								<div class="col-6 col-12-mobilep">
+									<label for="name">Endorsers Name</label>
+									<input class="text" type="text" name="email" id="email" value="" placeholder="John Doe" />
+								</div>
+								<div class="col-12 col-12-mobilep">
+									<label for="name">Pledge:</label>
+									<input class="text" type="text" name="name" id="name" value="" placeholder="I pledge to wear a mask properly and at all times when outside." />
+								</div>
+								<div class="col-3 col-12-mobilep">
+									<label for="subject">Endorser pledged amount:</label>
+									<input class="email" type="text" name="subject" id="subject" value="" placeholder="$10" />
+								</div>
+								<div class="col-12">
+									<ul class="actions special">
+										<li>
+											<a href="thankyou.html"><input type="button" value="Send" />
+											</a>
+										</li>
+										<li><input type="reset" value="Reset" class="alt" /></li>
+									</ul>
+								</div>
+							</div>
+						</form>
+					</section>
+					<section>	
+				</div></div>
 			<div id="footer2">
 				<div class="container medium">
 
