--- a/masks.html
+++ b/masks.html
@@ -51,42 +51,8 @@
 
 					<section>
 						<p>
-							No. of times a masked outings: _____ Money per
+							No. of times a masked outings: _____ Money per masked outing: _____ Money Raised: _____
 						</p>
-					</section>
-					<section>
-						<header>
-							<h3>Pledge Form</h3>
-						</header>
-						<form method="post" action="#">
-							<div class="row">
-								<div class="col-6 col-12-mobilep">
-									<label for="name">Your Name</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
-								</div>
-								<div class="col-6 col-12-mobilep">
-									<label for="name">Endorsers Name</label>
-									<input class="text" type="text" name="email" id="email" value="" placeholder="John Doe" />
-								</div>
-								<div class="col-12 col-12-mobilep">
-									<label for="name">Pledge:</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="I pledge to wear a mask properly and at all times when outside." />
-								</div>
-								<div class="col-3 col-12-mobilep">
-									<label for="subject">Endorser pledged amount:</label>
-									<input class="email" type="text" name="subject" id="subject" value="" placeholder="$10" />
-								</div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li>
-											<a href="thankyou.html"><input type="button" value="Send" />
-											</a>
-										</li>
-										<li><input type="reset" value="Reset" class="alt" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
 					</section>
 					<section>	
 				</div></div>
