--- a/masks.html
+++ b/masks.html
@@ -53,6 +53,13 @@
 						<p>
 							No. of times a masked outings: _____ Money per masked outing: _____ Money Raised: _____
 						</p>
+
+						<div class="col-12">
+									<ul class="actions special">
+										<li>
+											<a href="https://www.maskondangergone.github.io/masks.html/"><input type="button" value="Check out where you can donate" />
+											</a>
+										</li>
 					</section>
 					<section>	
 				</div></div>
