--- a/masks.html
+++ b/masks.html
@@ -57,7 +57,7 @@
 						<div class="col-12">
 									<ul class="actions special">
 										<li>
-											<a href="https://www.maskondangergone.github.io/masks.html/"><input type="button" value="Check out where you can donate" />
+											<a href="https://www.google.com"><input type="button" value="Check out where you can donate" />
 											</a>
 										</li>
 					</section>
