--- a/pushups.html
+++ b/pushups.html
@@ -48,6 +48,13 @@
 						<p>
 							No. of pushups completed: ______ Money per pushup completed: ______ Money Raised: ______
 						</p>
+
+						<div class="col-12">
+									<ul class="actions special">
+										<li>
+											<a href="money.html"><input type="button" value="Check out where you can donate" />
+											</a>
+										</li>
 							
 				</div></div>
 			<div id="footer1">
