--- a/masks.html
+++ b/masks.html
@@ -44,14 +44,14 @@
 						<p>
 							Show this to your endorser and have them sign it:
 						</p>
-						<blockquote>"I’m thinking about joining the Mask On, Danger Gone to help flatten the curve. I will be more responsible by properly wearing protective masks when stepping out. To incentivize me and help the cause, would you pledge me 1 dollar for every time I go outside/hang out with friends while always wearing my mask? All the proceeds would be donated to the American Red Cross Foundation, who are raising money to help the COVID-19 relief movement.”</blockquote>
+						<blockquote>"I’m joining the Mask On, Danger Gone to help flatten the curve. I will be more responsible by properly wearing protective masks when stepping out. To incentivize me and help the cause, would you pledge me money for every time I go outside/hang out with friends while always wearing my mask? All the proceeds would be donated to the American Red Cross Foundation, who are raising money to help the COVID-19 relief movement.”</blockquote>
 						
 					
 					</section>
 
 					<section>
 						<p>
-							No. of times a masked outings: _____ Money per masked outing: _____ Money Raised: _____
+							No. of masked outings: _____ Amount of money pledged per masked outing: _____ Money Raised: _____
 						</p>
 
 						<div class="col-12">
