--- a/pushups.html
+++ b/pushups.html
@@ -39,7 +39,7 @@
 						</p>
 						<blockquote>"I’m joining the Mask On, Danger Gone cause this quarantine. This will allow me to stay fit and support those who are less fortunate than us. To incentivize me and help the cause, will you pledge me money for every pushup I do? All the proceeds would be donated to the American Red Cross Foundation, to help people who aren't as fortunate as us during this time of great need.”</blockquote>
 						<p>
-							No. of pushups completed: ______ Money per pushup completed: ______ Money Raised: ______
+							No. of pushups completed: ______ Amount of money pledged per pushup: ______ Money Raised: ______
 						</p>
 
 						<div class="col-12">
