--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
 						<a href="pushups.html" class="image icon solid fa-heartbeat"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Exercise</h3>
-							<p>By taking a few seconds out of your day and doing a few pushups, you can drastically improve both your health and productivity in a discouraging environment. Click image to get involved.</p>
+							<p>By taking a few seconds out of your day and doing a few pushups, you can drastically improve both your health and productivity in a discouraging environment. Click image to get involved and find out more.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="masks.html" class="image icon solid fa-medkit"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Masks</h3>
-							<p>Teenagers have never been known to follow the rules, but these days, rule-breaking, such as not wearing masks in public, leads to issues like death, unemployment, and chaos in our world. Click image to get involved.</p>
+							<p>Teenagers have never been known to follow the rules, but these days, rule-breaking, such as not wearing masks in public, leads to issues like death, unemployment, and chaos in our world. Click image to get involved and find out more.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="money.html" class="image icon solid fa-credit-card"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Our Part</h3>
-							<p>Wondering where all the money you raise goes? Click image to find out.</p>
+							<h3>Donate Here</h3>
+							<p>Record all the money you raised and donate to the American Red Cross Foundation. Also, find out more about them! Click image to proceed.</p>
 						</div>
 					</section>
 				</div>
