--- a/pushups.html
+++ b/pushups.html
@@ -38,17 +38,21 @@
 							Show this to your endorser and if you want, print it out:
 						</p>
 						<blockquote>"I’m joining the Mask On, Danger Gone cause this quarantine. This will allow me to stay fit and support those who are less fortunate than us. To incentivize me and help the cause, will you pledge me money for every pushup I do? All the proceeds would be donated to the American Red Cross Foundation, to help people who aren't as fortunate as us during this time of great need.”</blockquote>
-						<p>
-							No. of pushups completed: ______ Amount of money pledged per pushup: ______ Money Raised: ______
-						</p>
-
-						<div class="col-12">
-									<ul class="actions special">
-										<li>
-											<a href="money.html"><input type="button" value="Check out where you can donate" />
-											</a>
-										</li>
+						
+						</section>
 							
+						<section>
+							<p>
+							No. of pushups completed: ______ Amount of money pledged per pushup: ______ Money Raised: ______
+							</p>
+
+							<div class="col-12">
+										<ul class="actions special">
+											<li>
+												<a href="money.html"><input type="button" value="Check out where you can donate" />
+												</a>
+											</li>
+						</section>		
 				</div></div>
 			<div id="footer1">
 				<div class="container medium">
