--- a/money.html
+++ b/money.html
@@ -36,7 +36,20 @@
 						</header>
 						<p>
 							With all your donations, you are making the world a better place. As a part of the Hack 2 Tomorrow Hackathon, we created this website and movement, but we hope it can go farther. Your valuable money will be put to good use and you can go to sleep at night knowing you made a difference!
-						</p>	
+						</p>
+
+						<div class="col-12">
+									<ul class="actions special">
+										<li>
+											<a href="https://www.redcross.org/donate/donation.html/"><input type="button" value="Donate Here" />
+											</a>
+										</li>
+						<div class="col-12">
+									<ul class="actions special">
+										<li>
+											<a href="https://docs.google.com/forms/d/e/1FAIpQLScNU3syhASFvCggOcXLinhrjJFOuB-NLSMggCV2bTaymwtPtQ/viewform"><input type="button" value="Log completed pledge here" />
+											</a>
+										</li>	
 						
 					</section>
 					
