--- a/money.html
+++ b/money.html
@@ -41,15 +41,13 @@
 						<div class="col-12">
 									<ul class="actions special">
 										<li>
-											<a href="https://www.redcross.org/donate/donation.html/"><input type="button" value="Donate Here" />
+											<a href="https://www.redcross.org/donate/donation.html/"><input type="button" value="Send" />
 											</a>
 										</li>
-						<div class="col-12">
-									<ul class="actions special">
 										<li>
-											<a href="https://docs.google.com/forms/d/e/1FAIpQLScNU3syhASFvCggOcXLinhrjJFOuB-NLSMggCV2bTaymwtPtQ/viewform"><input type="button" value="Log completed pledge here" />
-											</a>
-										</li>	
+											<a href="https://docs.google.com/forms/d/e/1FAIpQLScNU3syhASFvCggOcXLinhrjJFOuB-NLSMggCV2bTaymwtPtQ/viewform"><input type="button" value="Please fill out this survey!">
+
+										></li>
 						
 					</section>
 					
