--- a/money.html
+++ b/money.html
@@ -36,7 +36,7 @@
 							<h3>Thank you!</h3>
 						</header>
 						<p>
-							With all your donations, you are making the world a better place. As a part of the Hack 2 Tomorrow Hackathon, we created this website and movement, but we hope it can go farther. Your valuable money will be put to good use and you can go to sleep at night knowing you made a difference!
+							With all your donations, you are making the world a better place. As a part of the Hack 2 Tomorrow Hackathon, we created this website and movement, but we hope it can go farther. Your valuable money will be put to good use and so you can go to sleep at night knowing you made a difference!
 						</p>
 
 						<div class="col-12">
