--- a/pushups.html
+++ b/pushups.html
@@ -37,7 +37,7 @@
 						<p>
 							Show this to your endorser and if you want, print it out:
 						</p>
-						<blockquote>"I’m joining the Mask On, Danger Gone cause this quarantine. This will allow me to stay fit and support those who are less fortunate than us. To incentivize me and help the cause, will you pledge me money for every pushup I do? All the proceeds would be donated to the American Red Cross Foundation, to help people who aren't as fortunate as us during this time of great need.”</blockquote>
+						<blockquote>"I’m joining the Mask On, Danger Gone cause this quarantine. This will allow me to stay fit and support those who are less fortunate than us. To incentivize me and help the cause, will you pledge me money for every pushup I do? We will donate all the proceeds to the American Red Cross Foundation, to help people who aren't as fortunate as us during this time of great need.”</blockquote>
 						
 						</section>
 							
