--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 							<p>Record all the money you raised and donate to the American Red Cross Foundation. Also, find out more about them! Click image to proceed.</p>
 						</div>
 					</section>
+					<section class="feature right">
+						<a href="money.html" class="image icon solid fa-credit-card"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="content">
+							<h3>About us</h3>
+							<p>Learn about the creators of this website.</p>
+						</div>
+					</section>
 				</div>
 
 
