--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="money.html" class="image icon solid fa-user-circle"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="aboutus.html" class="image icon solid fa-user-circle"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>About us</h3>
 							<p>Learn about the creators of this website.</p>
