--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<div id="header5">
-				<span><img src="images/redflex.png" alt="" /></span>
+				<span><img src="images/person.png.png" alt="" /></span>
 				<h1>About us</h1>
 			</div>
 
