--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
 							<h3>Who are we?</h3>
 						</header>
 						<p>
-							Hi there! Our names are Soham Vohra, Kailash Gupta-Verma, and Allan Zhong. We are all high schoolers, in the graduating class of 2023. We all live in the Bay Area and two of us attend Bellarmine College Preparatory while one of us attends Los Gatos High School. We created this website as a part of a Hackathon called Hack 2 Tomorrow @ hack2tomorrow.github.io and we are looking to make a difference among this COVID-19 pandemic. We appreciate all donations and hopefully, we can do more in the future!
+							Hi there! Our names are Soham Vohra, Kailash Gupta-Verma, Allan Zhong, Nika Sabouri, and Amelie Kim. We are all high schoolers, in the graduating class of 2023. We all live in the Bay Area and two of us attend Bellarmine College Preparatory while three of us attend Los Gatos High School. We created this website as a part of a Hackathon called Hack 2 Tomorrow and we are looking to make a difference during this COVID-19 pandemic. We appreciate all donations and hopefully, we can do more in the future!
 						</p>
 					<section>
 						<p>
