--- a/masks.html
+++ b/masks.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<div id="header2">
 				<span><img src="images/pinkmask.png" alt="" /></span>
-				<h1>Masks</h1>
+				<h1>The Mask Challenge</h1>
 			</div>
 
 		<!-- Main -->
